--- a/logstash/pipeline/sync-posts.conf
+++ b/logstash/pipeline/sync-posts.conf
@@ -1,4 +1,9 @@
+
 input {
+    #JDBC — платформенно-независимый стандарт взаимодействия Java-приложений с различными СУБД.
+    #kafka
+    #rabbitMQ
+    #files
     jdbc {
         jdbc_connection_string => "jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DBNAME}"
         jdbc_user => "${POSTGRES_USERNAME}"
